# VGP-Visual-GUI-Proxy

./: LICENSE  README.md  index.html  package.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/config/: formats.rs  manager.rs  mod.rs  model.rs
src-tauri/src/proxy/: metrics.rs  mod.rs  socks5.rs
src-tauri/src/validation/: checker.rs  mod.rs
src/components/: Badge.tsx  ContextMenu.tsx  RailNav.tsx  StatusDot.tsx  Toggle.tsx  TopBar.tsx  UpdateBanner.tsx  VgpLogo.tsx
src/lang/: i18n.ts
src/lang/locales/en/: translation.json
src/lang/locales/ru/: translation.json
src/lib/: clipboard.ts  configSerialize.ts  configsDir.ts  defaultConfig.ts  format.ts  preferences.ts  rawLanguages.ts  recent.ts  tauri.ts  updater.ts  useContextMenu.ts  vgpEditorTheme.ts
src/pages/: ConfigsPage.tsx  EditorPage.tsx  SettingsPage.tsx  StartPage.tsx  TestPage.tsx  ValidationPage.tsx
src/store/: useAppStore.ts
src/types/: vgp.ts
