[package]
name = "vgp"
version = "0.1.0"
description = "A Tauri App"
authors = ["logbin05"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vgp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["full"] }
tauri-plugin-fs = "2.5.1"
tauri-plugin-dialog = "2.7.1"
serde_yaml = "0.9.34"
toml = "1.1.2"
rust-ini = "0.21.3"
tokio-socks = "0.5.3"
reqwest = { version = "0.13.4", features = ["socks", "json"] }
git2 = "0.21.0"
notify = "8.2.0"
thiserror = "2.0.18"
anyhow = "1.0.103"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"


# Read the optimization guideline for more details: https://tauri.app/concept/size/#cargo-configuration
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[dev-dependencies]
fast-socks5 = "1.0.0"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["full"] }
